# skaffold

./: .dockerignore  .gcloudignore  .gitignore  .gitmodules  .tool-versions  .travis.yml  =   CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.build  Gopkg.toml  KEYS  MAINTAINERS  Makefile  Makefile.diag  PR_DESCRIPTION.md  README.adoc  README.md  ROADMAP.md  SECURITY.md  appveyor.yml  baz.txt  cloudbuild.yaml  codecov.yml  default.profraw  deperecation-policy.md  deprecation-policy.md  flake.nix  go.mod  go.sum  k8s-skaffold-c0bfe91b623b.json.enc  skaffold.sln  skaffold.yaml  skaffold.yaml.old  test.sh  (+1 more)
.dependabot/: config.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/workflows/: PR.yaml  codeql-analysis.yml  compile-mac.yaml  containerized-linux.yml  draft-release.yml  integration-darwin.yml  integration-linux.yml  integration-windows.yml  linters-and-checks-linux.yml  linters-checks-and-unit-tests-linux.yml  linters-checks.yml  main.yml  members.json  multi-approvers.yml  performance-comparison-comment.yml  performance-comparison-label.yml  performance-comparison.yml  pr.yml  release-pr.yml  scorecards.yml  test-linux.yml  test.yml  unit-tests-darwin.yml  unit-tests-linux.yml  unit-tests-windows.yml  verify-examples.yml
.history/proto/: skaffold.pb_20201019204941.go  skaffold_20201019202306.proto  skaffold_20201019204512.proto  skaffold_20201019204611.proto  skaffold_20201019204638.proto  skaffold_20201019204646.proto  skaffold_20201019204717.proto  skaffold_20201019211214.proto
cmd/skaffold/: skaffold.go
codelab/01_kpt-validate/: README.md  tutorial.md
codelab/02_kpt-deploy/: README.md  tutorial.md
codelab/03_buildpacks-runimage-override/: README.md  skaffold.yaml  tutorial.md
deploy/: cloudbuild-louhi-release.yaml  cloudbuild-lts.yaml  cloudbuild-metrics-server.yaml  cloudbuild-release-lts.yaml  cloudbuild-release.yaml  cloudbuild-slim.yaml  cloudbuild.yaml  setup-secret.sh
deploy/binary-vuln-monitor/: cloudbuild.yaml  report.sh  scan.sh
deploy/buildpacks/: Dockerfile  entrypoint.sh  publish.sh
deploy/cross/: Dockerfile
deploy/docs/: build.sh  clean.sh  cloudbuild-release.yaml  cloudbuild.yaml  local-preview.sh  preview.sh
deploy/docs-v1/: Dockerfile  build.sh  cloudbuild-release.yaml  cloudbuild.yaml  local-preview.sh  preview.sh
deploy/docs-v2/: Dockerfile  build.sh  cloudbuild-release.yaml  cloudbuild.yaml  local-preview.sh  preview.sh
deploy/lts-vuln-monitor/: cloudbuild.yaml  report.sh  scan.sh
deploy/metrics-server/: Dockerfile
deploy/skaffold/: Dockerfile  Dockerfile.deps  Dockerfile.deps.lts  Dockerfile.deps.slim  Dockerfile.lts  Dockerfile.skaffold  Dockerfile.slim  builder.dockerfile  distribution.dockerfile  pod.yaml
docs/: .firebaserc  Dockerfile  README.md  building.adoc  building.md  concepts.adoc  concepts.md  config.toml  copyright.adoc  docker-commands.adoc  docker-commands.md  firebase.json  index.adoc  index.md  k8s-deployment.yaml  k8s-service.yaml  package-lock.json  published-artifacts.adoc  quickstart-gke.adoc  quickstart-gke.md  quicstart-gke.md  release.yaml  service.yaml  skaffold.yaml
docs-v1/: config.toml
docs-v2/: .firebaserc  README.md  config.toml
examples/: README.adoc  README.md  annotated-skaffold.yaml  demoit.html
fs/: fs.go
fuzz/: config_fuzz.go  fuzzit.sh  go.mod  reference_fuzz.go  server_fuzz.go
hack/: .gitignore  Dockerfile_proto  boilerplate.sh  build.bat  build_docs.sh  buildah-unshare.sh  check-cli.sh  check-docs.sh  check-licenses.sh  check-samples.sh  check-schema-changes.sh  check-skaffold-builder.sh  checks.sh  cloud-code-samples.sh  dep.sh  gen_licenses.sh  gen_statik.sh  generate-dash.sh  generate-embedded-files.sh  generate-k3d-registries-yaml  generate-k3d-registries.sh  generate-kind-config.sh  generate-licenses.sh  generate-man.sh  generate-proto.sh  generate-statik.sh  gofmt.sh  golangci-lint.sh  golangci.yml  gometalinter.json  gometalinter.sh  gotest.sh  install-golint.sh  install_golint.sh  linter.sh  linters.sh  new-version.sh  new_version.sh  pedantic-imports.sh  release.sh  (+7 more)
integration/: apply_test.go  binauthz_test.go  build_cluster_test.go  build_dependencies_test.go  build_gcb_test.go  build_image_test.go  build_test.go  cache_test.go  config_test.go  constants.go  control_api_test.go  credits_test.go  custom_test.go  debug_test.go  delete_test.go  deploy_cloudrun_test.go  deploy_hooks_test.go  deploy_test.go  dev_dependencies_test.go  dev_int_test.go  dev_test.go  diagnose_test.go  env_file_test.go  exec_k8s_actions_test.go  exec_test.go  filter_test.go  fix_test.go  generate_pipeline_test.go  helm_test.go  housekeeing_messages_test.go  housekeeping_messages_test.go  init_test.go  inspect_test.go  ko_test.go  main_test.go  modules_test.go  multiplatform_test.go  port_forward_test.go  remote_config_dependency_test.go  render_test.go  (+12 more)
integration/examples/bazel/: BUILD.bazel  MODULE.bazel  README.adoc  README.md  WORKSPACE  bazel-bazel  bazel-bin  bazel-genfiles  bazel-out  bazel-testlogs  build.sh  deploy.yaml  skaffold.yaml
integration/examples/bazel/k8s/: k8s-pod.yaml
integration/testdata/bazel-rules-oci/: BUILD  MODULE.bazel  bazel-bazel-rules-oci  bazel-bin  bazel-out  bazel-testlogs  skaffold.yaml
integration/testdata/bazel-rules-oci-multi-arch/: .bazelrc  BUILD.bazel  MODULE.bazel  deploy.yaml  main.go  skaffold.yaml
integration/testdata/bazel-rules-oci/sub-dir/: BUILD
logo/: skaffold.ai  skaffold.eps  skaffold1.eps
metrics-server/: main.go
proto/: markdown.tmpl  skaffold.pb.go  skaffold.pb.gw.go  skaffold.proto
schemas/: index.html  main.css  main.go  main.js  main_test.go  v1alpha1.json  v1alpha2.json  v1alpha3.json  v1alpha4.json  v1alpha5.json  v1beta1.json  v1beta2.json  v1beta3.json  v1beta4.json  v1beta5.json
test/: cmd_helper.go  fake_image_api.go  util.go
testutil/: checks.go  cmd_helper.go  env.go  fake_fs.go  fake_image_api.go  kubecontext.go  tmp.go  util.go  util_test.go
webhook/: webhook.go
(+5179 files in other folders)
